# ugba-testing

./: .gitignore  .gitmodules  CMakeLists.txt  assets.sh  readme.rst
cmake/: compiler_flags.cmake  example.cmake  toolchain_gba.cmake
examples/: assets.sh
examples/bios/: assets.sh
examples/bios/bios_decompress/source/: main.c
examples/bios/intr_wait/source/: main.c
examples/dma/: assets.sh
examples/dma/basic_dma/source/: main.c
examples/dma/hblank_dma_repeat/: test.lua
examples/dma/hblank_dma_repeat/source/: main.c
examples/dma/invalid_dma/: assets.sh
examples/dma/invalid_dma/source/: main.c
examples/dma/vblank_dma_repeat/source/: main.c
examples/dma/vblank_hblank_dma/: assets.sh
examples/dma/vblank_hblank_dma/source/: main.c
examples/graphics/: CMakeLists.txt  assets.sh
examples/graphics/background_affine/: assets.sh
examples/graphics/background_affine/source/: main.c
examples/graphics/background_regular_16col/: assets.sh
examples/graphics/background_regular_16col/source/: main.c
examples/graphics/background_window/: assets.sh
examples/graphics/background_window/source/: main.c
examples/graphics/mode4_framebuffer/: test.lua
examples/graphics/mode5_framebuffer/: test.lua
examples/graphics/mosaic/: assets.sh
examples/graphics/mosaic/source/: main.c
examples/graphics/priorities/source/: main.c
examples/graphics/special_effects/: assets.sh
examples/graphics/special_effects/source/: main.c
examples/graphics/sprite_affine_16col/: assets.sh
examples/graphics/sprite_affine_16col/source/: main.c
examples/graphics/sprite_lowlevel_16col/: assets.sh
examples/graphics/sprite_lowlevel_16col/source/: main.c
examples/graphics/sprite_lowlevel_256col/: assets.sh
examples/graphics/sprite_lowlevel_256col/source/: main.c
examples/graphics/sprite_regular_16col/: assets.sh
examples/graphics/sprite_regular_16col/source/: main.c
examples/graphics/sprite_regular_256col/source/: main.c
examples/graphics/windows/: assets.sh
examples/graphics/windows/source/: main.c
examples/interrupts/: assets.sh
examples/interrupts/hblank_irq_handler/: assets.sh
examples/interrupts/hblank_irq_handler/source/: main.c
examples/interrupts/hblank_vcount_lines/source/: main.c
examples/other/: CMakeLists.txt
examples/other/cpp_example/: test.lua
examples/other/cpp_example/source/: main.cpp
examples/other/iwram_ewram_sections/: test.lua
examples/other/iwram_ewram_sections/gba/: CMakeLists.txt
examples/other/iwram_ewram_sections/sdl2/: CMakeLists.txt
examples/other/iwram_ewram_sections/source/: main.c
examples/other/save_sram/source/: main.c
examples/sound/: CMakeLists.txt  assets.sh
examples/sound/gbt_player/: CMakeLists.txt  assets.sh
examples/sound/gbt_player/source/: main.c
examples/sound/global_psg/source/: main.c
examples/sound/umod/: assets.sh
examples/sound/umod/source/: main.c
tools/bin2c/: CMakeLists.txt
unittests/: CMakeLists.txt
unittests/bios/: CMakeLists.txt
unittests/bios/swi_copy/source/: main.c
unittests/cmake/: unittest.cmake
unittests/interrupts/: CMakeLists.txt
unittests/interrupts/vbl_hbl_vcount_handler_priority/source/: main.c
unittests/interrupts/vbl_hbl_vcount_line_order/source/: main.c
unittests/maths/error_trig/source/: main.c
unittests/sram/: CMakeLists.txt
unittests/sram/sram_autosave/source/: main.c
unittests/sram/sram_read_write/: test.lua
unittests/sram/sram_read_write/source/: main.c
